--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,12 +8,24 @@
 <% @books.each do |book| %>
   <span><%= book.title %></span>
   <span><%= book.body %></span>
-
+  <%= link_to 'show' , book_path(book.id)%>
+  <%= link_to 'edit'  ,edit_book_path(book.id)%>
+  <%= link_to 'detroy' , destroy_book_path(book.id) , method: :delete , "data-confirm" => "Are you sure?" %>
 <% end %>
 
-<!----投稿機能-->
+ <!----投稿機能-->
 <h2>New book</h2>
-<%= form_with model: @book do |f| %>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message%></li>
+      <% end %>
+    </ul>
+<% end %>
+
+
+<%= form_with model: @book ,url: '/books' , method: :post do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
