--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <h1>ようこそ Bookers へ！</h1>
-<p><span class="bold">Bookers</span> では、さまざまな書籍に関するあなたの意見や</p>
+<p><span class="bold">Bookers</span> では、さまざまな書籍に関するあなたの意見や
 
 <p>印象を共有し交換することができます</p>
 
