--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,33 @@
 <h1>Editing Book</h1>
+<!--空白判定-->
+<% if @searchBook.errors.any? %>
+  <%= @searchBook.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @searchBook.errors.full_messages.each do |message| %>
+        <li><%= message%></li>
+      <% end %>
+    </ul>
+<% end %>
+
+
+<!--記述処理-->
 <%= form_with model: @book , url: update_book_path(@book.id), method: :patch do |f|%>
   <p>Title</p>
-  <%= f.text_field :title%>
+  <% if @searchBook.errors.any?%>
+    <%= f.text_field :""%>
+  <% else %>
+    <%= f.text_field :title%>
+  <% end%>
+
   <p>Body</p>
-  <%= f.text_area :body %>
-  <%= f.submit 'Update book' %>
+  <% if @searchBook.errors.any?%>
+    <%= f.text_field :""%>
+  <% else %>
+    <%= f.text_field :body%>
+  <% end%>
+  <%= f.submit 'Update book'%>
 <% end %>
+
+<!--editのルート作成--->
+<%= link_to 'show' , book_path(@book.id)%>
+<%= link_to 'back' , '/books' %>
