--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -11,8 +11,13 @@
     </ul>
 <% end %>
 
-
 <%= form_with model: @book ,url: '/books' , method: :post do |f| %>
+<div class="text-success">
+  <%= flash[:notice] %>
+</div>
+<div class="text-danger">
+  <%= flash[:alret] %>
+</div>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
