--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,17 +1,28 @@
 <h1>Books</h1>
-<div>
-  <h2>Title</h2>
-  <h2>Body</h2>
-</div>
 
 <!--本の一覧-->
-<% @books.each do |book| %>
-  <span><%= book.title %></span>
-  <span><%= book.body %></span>
-  <%= link_to 'show' , book_path(book.id)%>
-  <%= link_to 'edit'  ,edit_book_path(book.id)%>
-  <%= link_to 'detroy' , destroy_book_path(book.id) , method: :delete , "data-confirm" => "Are you sure?" %>
-<% end %>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to 'Show' , book_path(book.id)%></td>
+        <td><%= link_to 'Edit'  ,edit_book_path(book.id)%></td>
+        <td><%= link_to 'Destroy' , destroy_book_path(book.id) , method: :delete , "data-confirm" => "Are you sure?" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 
  <!----投稿機能-->
 <h2>New book</h2>
@@ -29,5 +40,5 @@
   <%= f.text_field :title %>
   <h4>Body</h4>
   <%= f.text_area :body %>
-  <%= f.submit 'create book' %>
+  <%= f.submit 'Create Book' %>
 <% end %>
