--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,5 +10,5 @@
 <p><%= @book.body %></p>
 
 <!--editのルート作成--->
-<%= link_to 'edit' , edit_book_path(@book.id)%>
-<%= link_to 'back' , '/books' %>
+<%= link_to 'Edit' , edit_book_path(@book.id)%>
+<%= link_to 'Back' , '/books' %>
