--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,9 @@
-<h1>ようこそ Bookers へ！</h1>
-<p><span class="bold">Bookers</span> では、さまざまな書籍に関するあなたの意見や
+<h1>ようこそ<strong>Bookers</strong>へ！</h1>
+<p>
+  <strong>Bookers</strong>
+  では、さまざまな書籍に関するあなたの意見や
+</p>
 
 <p>印象を共有し交換することができます</p>
 
-<%= link_to 'start' , 'books'%>
+<%= link_to 'start' , '/books'%>
