--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+
+/*Books*/
+th{
+  padding-bottom: 5px;
+}
+td{
+  padding-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px
+}
+a{
+  color: #000;
+}
+
+
+/*New Book*/
+div.field{
+  margin-bottom: 10px
+}
