--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,9 +36,13 @@
 <% end %>
 
 <%= form_with model: @book ,url: '/books' , method: :post do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Body</h4>
+<div class="field">
+  <label for="book_title">Title</label>
+  <%= f.text_field :title , class = "book_title" %>
+</div>
+<div>
+  <label>Body</label>
   <%= f.text_area :body %>
+</div>
   <%= f.submit 'Create Book' %>
 <% end %>
