--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,22 @@
  *= require_self
  */
 
+/*共通部分*/
+body{
+  background:#fff;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px
+}
 
+p , ul , ol , td{
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+}
 /*Books*/
 th{
   padding-bottom: 5px;
@@ -24,12 +39,61 @@ td{
   padding-left: 5px;
   padding-right: 5px
 }
+
 a{
   color: #000;
 }
-
+/*閲覧済みの場合*/
+a:vidited{
+  color: #666;
+}
+li{
+  font-size: 12px;
+}
 
 /*New Book*/
-div.field{
+.field{
   margin-bottom: 10px
+}
+
+label{
+  display: block;
+}
+
+/*送信処理*/
+div.action{
+  margin-bottom: 10px
+}
+
+/*New Book err処理*/
+#error_explanation{
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#error_explanation h2{
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  margin-bottom: 0;
+  background-color: #c00;
+  color: #fff;
+}
+
+.field_with_error{
+    padding: 2px;
+    background-color: red;
+    display: table;
+}
+
+
+/*show page*/
+#text-success{
+  color: green;
 }
