--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,23 +26,37 @@
 
  <!----投稿機能-->
 <h2>New book</h2>
+<!--errがある場合表示-->
 <% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
+<div id="error_explanation">
+  <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message%></li>
       <% end %>
     </ul>
+</div>
 <% end %>
 
 <%= form_with model: @book ,url: '/books' , method: :post do |f| %>
 <div class="field">
-  <label for="book_title">Title</label>
-  <%= f.text_field :title , class = "book_title" %>
+  <!--errがある場合class属性の追加-->
+  <div class="<%= ' field_with_error' if @book.errors.any? %>">
+    <label for="book_title">Title</label>
+  </div>
+  <div class="<%= ' field_with_error' if @book.errors.any? %>">
+    <%= f.text_field :title %>
+  </div>
 </div>
-<div>
-  <label>Body</label>
-  <%= f.text_area :body %>
+<div class="field">
+  <div class="<%= ' field_with_error' if @book.errors.any? %>">
+    <label>Body</label>
+  </div>
+  <div class="<%= ' field_with_error' if @book.errors.any? %>">
+    <%= f.text_area :body %>
+  </div>
 </div>
+<div class="action">
   <%= f.submit 'Create Book' %>
+</div>
 <% end %>
