--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,13 @@
-<div class="text-success">
+<p id="text-success">
   <%= flash[:notice] %>
-</div>
+</p>
 
 
-<h2>title</h2>
-<p><%= @book.title %></p>
+<p><strong>Title:</strong><%= @book.title %></p>
 
-<h2>本文</h2>
-<p><%= @book.body %></p>
+<p><strong>Body:</strong><%= @book.body %></p>
 
 <!--editのルート作成--->
 <%= link_to 'Edit' , edit_book_path(@book.id)%>
+|
 <%= link_to 'Back' , '/books' %>
