--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Editing Book</h1>
 <!--errがある場合表示-->
-<% if @searchbook.errors.any? %>
+<% if @updateBook.errors.any? %>
   <div id="error_explanation">
-    <h2><%= @searchbook.errors.count %> errors prohibited this book from being saved:</h2>
+    <h2><%= @updateBook.errors.count %> errors prohibited this book from being saved:</h2>
       <ul>
-        <% @searchbook.errors.full_messages.each do |message| %>
+        <% @updateBook.errors.full_messages.each do |message| %>
           <li><%= message%></li>
         <% end %>
       </ul>
@@ -15,18 +15,18 @@
 <%= form_with model: @book , url: update_book_path(@book.id), method: :patch do |f|%>
   <!--新規記述-->
   <div class="field">
-    <div class="<%= ' field_with_error' if @searchbook.errors.any? %>">
+    <div class="<%= ' field_with_error' if @updateBook.errors.any? %>">
       <label for="book_title">Title</label>
     </div>
-    <div class="<%= ' field_with_error' if @searchbook.errors.any? %>">
+    <div class="<%= ' field_with_error' if @updateBook.errors.any? %>">
       <%= f.text_field :title %>
     </div>
   </div>
   <div class="field">
-    <div class="<%= ' field_with_error' if @searchbook.errors.any? %>">
+    <div class="<%= ' field_with_error' if @updateBook.errors.any? %>">
        <label>Body</label>
     </div>
-    <div class="<%= ' field_with_error' if @searchbook.errors.any? %>">
+    <div class="<%= ' field_with_error' if @updateBook.errors.any? %>">
        <%= f.text_area :body %>
     </div>
   </div>
